# moe-explore

./: .gitignore  README.md  pyproject.toml
bench/: bench_bs.py  bench_functional.py  bench_glu.py  bench_m_grouped.py  bench_m_grouped_gemm.py  bench_m_grouped_glu.py  ncu.sh  plot.py  profile_functional.py  profile_ncu.py  profile_proton.py
csrc/: .clangd  Makefile  README.md  cutlass2_group_gemm.cu  cutlass_group_gemm.cu
group_gemm/: bench_group_gemm.py  expert_permute.py  group_gemm_test.py  group_gemm_triton.py  moe_grouped_gemm.py  ncu.sh  profile_group_gemm.py
group_gemm/cutlass/: cutlass_group_gemm.cu
group_gemm/nested_moe/: expert_permute_nested.py  nested_test.py
group_gemm/triton_group_gemm/: expert_permute.py  group_gemm_test.py
group_gemm/triton_grouped_gemm/: grouped_gemm.py
moe/: functional.py  gpu_utils.py  matmul_gather_scatter.py
moe/parallel_linear_impl/: grouped_gemm_triton.py
naive/: naive_moe.py  parallel_experts.py
profiling/: ncu.sh  profile_methods.py
profiling/flops/: benchmark.py  group_gemm_moe.py
profiling/gpu_peak/: profile_gemm.py
profiling/naive/: parallel_experts.py
profiling/ncu_roofline/: ncu_roofline.py
profiling/roofline/: benchmark.py
profiling/roofline/gpu_peak/: gpu_peak_from_gemm.py
profiling/scattermoe/: scattermoe_benchmark.py  scattermoe_profile.py
scripts/: autotune_triton_kernel.py  barplot_bench_glu.py  grouped_gemm_time_plot.py  percentage_plot.py  router_analysis.py  router_heatmap.py  wikitext_router_analysis.py
src/moe_explore/: autotune_config.py  expert_permute.py  functional.py  gpu_utils.py  group_gemm.py  hf_moe_reference.py  matmul_gather_scatter.py  params.py  router.py  test_utils.py  testing.py
src/moe_explore/functional/: activation.py  forward.py  glu.py  mlp.py  scale_and_reduce.py  topk_moe.py
src/moe_explore/parallel_linear_impl/: grouped_gemm_triton.py
src/moe_explore/router_impl/: topk_router.py
src/moe_explore/triton_kernels/: activation.py  autotune_config.py  epilogue_split.py  fused_moe.py  glu.py  group_gemm.py  grouped_mm_gather_scatter.py  m_grouped_gemm.py  m_grouped_gemm_manual.py  m_grouped_glu.py  m_grouped_glu_interleaved.py  matmul_gather_scatter.py  row_gather_scatter.py
tests/: test_functional.py  test_fused_moe.py  test_glu.py  test_hf.py  test_m_grouped_gemm.py  test_m_grouped_glu.py  test_matmul_gather_scatter.py  test_row_gather_scatter.py  test_triton_activations.py
