[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "moe_explore"
version = "0.1.0"
description = "Playing around with some MoE Implementations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pytest",
  "numpy",
  "matplotlib>=3.10.3",
  "pandas>=2.3.0",
  "imgcat>=0.6.0",
  "torch==2.7.1", # fixed version for sglang
  "torchvision>=0.22.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126" },
]
torchvision = [
  { index = "pytorch-cu126" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
  "tests"
]
