
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "moe_explore"
version = "0.1.0"
description = "Playing around with some MoE Implementations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pytest",
  "numpy",
  "matplotlib>=3.10.3",
  "pandas>=2.3.0",
  "imgcat>=0.6.0",
  "torch==2.7.1", # fixed version for sglang
  "torchvision>=0.22.0",
]

[project.optional-dependencies]
tests = [
  "transformers",
]
bench = [
  "transformers"
]
all = ["moe_explore[tests]", "moe_explore[bench]"]

[tool.uv.sources]
torch = [
  # For developing on macos, need need cpu torch
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
  "tests"
]
